--- a/12-09-2023 - Projeto HTML/style.css
+++ b/12-09-2023 - Projeto HTML/style.css
@@ -1,4 +1,91 @@
-body{
-    background-color: grey;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap');
+
+*{
     margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: rgb(0, 143, 124);
+    margin: 0;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.cabecalho{
+    display: flex;
+    background-color: rgb(231, 231, 231);
+    height: 10vh;
+    justify-content: end;
+    align-items: center;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(0, 143, 124);
+    font-weight: 500;
+}
+
+.titulo{
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.imagem{
+    border-radius: 15px;
+    border-style: solid;
+    border-color: rgb(231, 231, 231);
+    justify-content: flex-start;
+    float: left;
+    margin-right: 10px;
+}
+
+.subtitulo{
+    color: white;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.tituloLista{
+    color: white;
+    font-weight: 400;
+    gap: 20px;
+}
+
+.texto{
+    color: white;
+    font-weight: 300;
+}
+
+.todosTextos{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+}
+
+.sobreMim{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    color: rgb(0, 143, 124);
+    border-radius: 10px;
+    font-weight: 300;
+    align-items: center;
+    margin-top: 2%;
+    margin-left: 35%;
+    margin-right: 35%;
+}
+
+.duvidas{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    color: rgb(0, 143, 124);
+    width: 40%;
+    margin-top: 2%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
